--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=4000
 PWD=frEA42FLaLk0jlvC
-CONNETCTION_STRING=mongodb+srv://boussabatmarwen9:frEA42FLaLk0jlvC@cluster0.9k8pdvg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0""
+CONNETCTION_STRING=mongodb+srv://boussabatmarwen9:frEA42FLaLk0jlvC@cluster0.9k8pdvg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
