--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=4000
 PWD=frEA42FLaLk0jlvC
-CONNETCTION_STRING=mongodb+srv://boussabatmarwen9:frEA42FLaLk0jlvC@cluster0.9k8pdvg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+SECRET_KEY=myScretLKey
+CONNETCTION_STRING=mongodb+srv://boussabatmarwen9:frEA42FLaLk0jlvC@cluster0.9k8pdvg.mongodb.net/auth_project_db?retryWrites=true&w=majority&appName=Cluster0
+MAILTARP_TOKEN=d776d7dd4445923a040e19d68020f351
