--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ PORT=4000
 PWD=frEA42FLaLk0jlvC
 SECRET_KEY=myScretLKey
 CONNETCTION_STRING=mongodb+srv://boussabatmarwen9:frEA42FLaLk0jlvC@cluster0.9k8pdvg.mongodb.net/auth_project_db?retryWrites=true&w=majority&appName=Cluster0
-MAILTARP_TOKEN=d776d7dd4445923a040e19d68020f351
+MAIL_SERVICE_PASSWORD=ljvvmdjhpfsvcjoq
+MAIL_SERVICE_OWNER=boussabatmarwen9@gmail.com
