setting up the debugger

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=4000
+NODE_ENV=development
 PWD=frEA42FLaLk0jlvC
 SECRET_KEY=myScretLKey
 CONNETCTION_STRING=mongodb+srv://boussabatmarwen9:frEA42FLaLk0jlvC@cluster0.9k8pdvg.mongodb.net/auth_project_db?retryWrites=true&w=majority&appName=Cluster0
